<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/backgroundcolor">


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="224dp"
            android:layout_height="201dp"
            android:layout_gravity="left"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:src="@drawable/sun" />

        <LinearLayout
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:text="Clear"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity=""
                android:layout_margin="5dp"
                android:text="30 C"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity=""
                android:layout_margin="5dp"
                android:text="Feels like: 28 C"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>



















    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">



        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/rectangle"
            android:layout_marginLeft="3dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_pressure"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="2dp"
                android:layout_height="80dp"
                android:background="#6A686C"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Pressure"
                    android:textAlignment="textStart"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Pvalue"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>















        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/rectangle"
            android:layout_marginLeft="3dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_unknown"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="2dp"
                android:layout_height="80dp"
                android:background="#6A686C"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"


            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Wind"
                    android:textAlignment="textStart"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Wvalue"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

























































    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">



        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/orangerectangle"
            android:layout_marginLeft="3dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_sunrise"
                android:layout_marginLeft="5dp"/>


            <View
                android:layout_width="2dp"
                android:layout_height="80dp"
                android:background="#6A686C"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Sunrise"
                    android:textAlignment="textStart"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Svalue"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>















        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/orangerectangle"
            android:layout_marginLeft="3dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_sunset"
                android:layout_marginLeft="5dp"/>



            <View
                android:layout_width="2dp"
                android:layout_height="80dp"
                android:background="#6A686C"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"



            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Sunset"
                    android:textAlignment="textStart"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Suvalue"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>























    </LinearLayout>











    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">



        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/bluerectangle"
            android:layout_marginLeft="3dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_clouds"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="2dp"
                android:layout_height="80dp"
                android:background="#6A686C"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"



            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Clouds"
                    android:textAlignment="textStart"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Cvalue"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>















        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/bluerectangle"
            android:layout_marginLeft="3dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_humidity"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="2dp"
                android:layout_height="80dp"
                android:background="#6A686C"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"



            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Humidity"
                    android:textAlignment="textStart"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Hvalue"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>